[gd_scene load_steps=6 format=3 uid="uid://cb0jw1tjo2y0y"]

[ext_resource type="Script" path="res://scripts/event.gd" id="1_event"]
[ext_resource type="FontFile" uid="uid://dvxbp285xmtig" path="res://assets/fonts/Knights Quest.ttf" id="2_title_font"]
[ext_resource type="FontFile" uid="uid://brfvbtde0o65k" path="res://assets/fonts/FiraCode-Regular.ttf" id="3_body_font"]
[ext_resource type="Theme" uid="uid://bif1vn82s31vk" path="res://scenes/GUI.tres" id="4_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_result"]
bg_color = Color(0.0862745, 0.129412, 0.243137, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.952941, 0.611765, 0.0705882, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Event" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_event")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.180392, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.952941, 0.611765, 0.0705882, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_title_font")
theme_override_font_sizes/font_size = 48
text = "Event Title"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 100.0
offset_bottom = 160.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.741176, 0.764706, 0.780392, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_body_font")
theme_override_font_sizes/font_size = 18
text = "Event description goes here"
horizontal_alignment = 1
autowrap_mode = 3

[node name="OptionsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_theme")
theme_override_constants/separation = 15
alignment = 1

[node name="ResultPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_result")

[node name="MarginContainer" type="MarginContainer" parent="ResultPanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="ResultLabel" type="Label" parent="ResultPanel/MarginContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0.92549, 0.941176, 0.945098, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_body_font")
theme_override_font_sizes/font_size = 18
text = "Result text"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MerchantPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_result")

[node name="MarginContainer" type="MarginContainer" parent="MerchantPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MerchantPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="MerchantTitle" type="Label" parent="MerchantPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.952941, 0.611765, 0.0705882, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_title_font")
theme_override_font_sizes/font_size = 32
text = "Merchant's Wares"
horizontal_alignment = 1

[node name="RelicsContainer" type="VBoxContainer" parent="MerchantPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="MerchantPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_theme")
text = "Leave Merchant"

[node name="ContinueButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -70.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_theme")
text = "Continue"
